# cyber-guard

./: Cybar_Guard.md  README.md  analysis_options.yaml  implementation_plan.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  anti_hook.cpp  security_core.cpp
ios/Runner/: AppDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Security/: AntiDebugProtection.swift  CyberGuardPlugin.swift  DYLDMonitor.swift  IntegrityVerifier.swift  JailbreakDetector.swift  ScreenCaptureDetector.swift  SecurePdfPlugin.swift  SecurePlayerPlugin.swift  SecurityEventEmitter.swift
lib/: app.dart  cyber_guard.dart  main.dart
lib/api/: cyber_guard_api.dart  secure_image_viewer.dart  secure_media_player.dart  secure_pdf_viewer.dart
lib/api/models/: media_source.dart  player_config.dart
lib/core/encryption/: drm_bridge.dart  (+2 more)
lib/media/: player_controls.dart  player_overlay.dart  player_state.dart  secure_player_controller.dart
lib/platform/: platform_security.dart  web_pdf_stub.dart  web_pdf_web.dart  web_security_bridge.dart  web_security_bridge_stub.dart  web_security_bridge_web.dart  web_video_stub.dart  web_video_web.dart
lib/ui/: blur_shield.dart  secure_content_widget.dart  security_status_bar.dart  watermark_overlay.dart
linux/: CMakeLists.txt
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build_all.sh  cbindgen.toml
rust/include/: cyberguard_core.h
rust/src/: crypto.rs  detection.rs  lib.rs  watermark.rs
test/: security_test_suite.dart  widget_test.dart
web/: index.html  secure_pdf.js  secure_player.js  security_guard.js  security_sw.js
windows/runner/: Runner.rc
(+48 files in other folders)
